// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.combobox allowClear renders correctly 1`] = `
<div
  class="rc-select rc-select-combobox rc-select-enabled rc-select-allow-clear"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--single"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <ul>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="rc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="rc-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Select.combobox renders correctly 1`] = `
<div
  class="rc-select rc-select-combobox rc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-controls=""
    aria-expanded="false"
    aria-haspopup="true"
    class="rc-select-selection
            rc-select-selection--single"
    role="combobox"
  >
    <div
      class="rc-select-selection__rendered"
    >
      <div
        class="rc-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        Search
      </div>
      <ul>
        <li
          class="rc-select-search rc-select-search--inline"
        >
          <div
            class="rc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="rc-select-search__field"
              value=""
            />
            <span
              class="rc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="rc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <i
        class="rc-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;
